# VPS-Control-API

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/config/: settings.py  urls.py
app/vps_control/: apps.py  models.py  serializers.py  urls.py  views.py
app/vps_control/integrations/: factories.py  vps_server_api.py
app/vps_control/interfaces/: vps_server_api_interface.py
app/vps_control/migrations/: 0001_initial.py  0002_remove_vps_id_alter_vps_uid.py
app/vps_control/repositories/: vps_server_repository.py
app/vps_control/services/: vps_control_service.py
app/vps_control/stubs/: vps_server_api_stub.py
